# cars

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
cars/: data.json
cars/api/: custom_filters.py  serializers.py  urls.py  views.py
cars/cars/: settings.py
cars/orders/: admin.py  models.py
cars/orders/migrations/: 0001_initial.py  0002_auto_20221017_0835.py
infra/: .env.template  docker-compose.yml  entrypoint.sh  nginx.conf
